net/smtp integration
